[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/interface/options_menu.tscn" type="PackedScene" id=2]

[node name="title_screen" type="CanvasLayer"]
script = ExtResource( 1 )
target_scene = "res://scenes/world/world.tscn"

[node name="Title_Screen_Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Overlay" type="ColorRect" parent="Title_Screen_Menu"]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 1, 1, 1, 0 )

[node name="Start_Menu" type="Control" parent="Title_Screen_Menu/Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )

[node name="Panel" type="Panel" parent="Title_Screen_Menu/Overlay/Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -110.0
margin_right = 95.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 104, 124 )

[node name="Start_Button" type="Button" parent="Title_Screen_Menu/Overlay/Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -85.0
margin_right = 50.0
margin_bottom = -65.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 10 )
text = "Start"

[node name="Options_Button" type="Button" parent="Title_Screen_Menu/Overlay/Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -35.0
margin_right = 50.0
margin_bottom = -15.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 10 )
text = "Options"

[node name="Credits_Button" type="Button" parent="Title_Screen_Menu/Overlay/Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 15.0
margin_right = 50.0
margin_bottom = 35.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 10 )
text = "Credits"

[node name="Quit_Button" type="Button" parent="Title_Screen_Menu/Overlay/Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 65.0
margin_right = 50.0
margin_bottom = 85.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 10 )
text = "Quit"

[node name="Options_Menu" parent="Title_Screen_Menu/Overlay" instance=ExtResource( 2 )]
visible = false

[node name="QTD_Confirmation" type="Control" parent="Title_Screen_Menu/Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )

[node name="Panel" type="Panel" parent="Title_Screen_Menu/Overlay/QTD_Confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -55.0
margin_right = 100.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 20, 20 )

[node name="Label" type="Label" parent="Title_Screen_Menu/Overlay/QTD_Confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -35.0
margin_right = 22.0
margin_bottom = -21.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Are you sure?"
align = 1
valign = 1

[node name="Yes_Button" type="Button" parent="Title_Screen_Menu/Overlay/QTD_Confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 15.0
margin_right = -30.0
margin_bottom = 35.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 20, 10 )
text = "Yes"

[node name="No_Button" type="Button" parent="Title_Screen_Menu/Overlay/QTD_Confirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = 15.0
margin_right = 70.0
margin_bottom = 35.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 20, 10 )
text = "No"

[connection signal="pressed" from="Title_Screen_Menu/Overlay/Start_Menu/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/Start_Menu/Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/Start_Menu/Credits_Button" to="." method="_on_Credits_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/Start_Menu/Quit_Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/Options_Menu/Overlay/Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/QTD_Confirmation/Yes_Button" to="." method="_on_Yes_Button_pressed"]
[connection signal="pressed" from="Title_Screen_Menu/Overlay/QTD_Confirmation/No_Button" to="." method="_on_No_Button_pressed"]

[editable path="Title_Screen_Menu/Overlay/Options_Menu"]
